--- a/front-end/frontEnd/src/app/admin-page/admin-page.component.html
+++ b/front-end/frontEnd/src/app/admin-page/admin-page.component.html
@@ -58,10 +58,10 @@
       >
         <div class="icon-box">
           <div class="icon"><i class="ri-command-line"></i></div>
-          <h4 class="title"><a href="">Magni Dolores</a></h4>
+          <h4 class="title"><a routerLink="/signUp">register a pharmacy</a></h4>
           <p class="description">
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia
+            Fill the necessary informations and register a pharmacy to the
+            system
           </p>
         </div>
       </div>
